<resources>
    <string name="app_name">Quesex</string>
    <string name="sex_home">Quesex</string>
    <string name="text_pubertas">Pubertas</string>
    <string name="text_identitas">Identitas Gender</string>
    <string name="orientasi">Orientasi Sex</string>
    <string name="pms">Pra-Menstruasi</string>
    <string name="kehamilan">Kehamilan</string>
    <string name="tubuh">Tubuh Kita</string>
    <string name="reproduksi">Reproduksi</string>
    <string name="hubungan">Hubungan</string>
    <string name="logo">Qsexproject</string>
    <string name="signin">Sign In</string>
    <string name="username">Usename</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="btn_signin">Sign In</string>
    <string name="info_signin">Belum Punya Akun? Sign Up</string>
    <string name="Qsexproject2">logo2</string>
    <string name="signup_username">Username</string>
    <string name="signup_email">Email</string>
    <string name="signup_pass">Password</string>
    <string name="signup_confirm">Confirm Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="info_signup">Sudah punya akun? Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="QsexProject3">logo3</string>
    <string name="home_qsex">logo ce/co</string>
    <string name="menu_home">Menu</string>
    <string name="pubertas_info">Pubertas</string>
    <string name="QsexProject4">logo pubertas</string>
    <string name="exit_dialog">Apakah anda ingin keluar dari aplikasi?</string>
    <string name="judul_pubertas">Pubertas</string>
    <string name="isi_pubertas">Pubertas adalah periode perkembangan fisik dan seksual yang terjadi saat seseorang mencapai kematangan reproduksi. Proses pubertas terjadi pada remaja dan ditandai dengan perubahan signifikan dalam tubuh, hormon, dan fungsi seksual. Berikut adalah informasi penting tentang pubertas:
\n\n1.Rentang Usia: Pubertas biasanya terjadi antara usia 8-13 tahun pada perempuan dan 9-14 tahun pada laki-laki. Namun, rentang usia pubertas dapat bervariasi untuk setiap individu.
\n\n2.Perubahan Fisik pada Perempuan:
   - Pertumbuhan payudara: Payudara mulai tumbuh dan berkembang.
   - Pertumbuhan rambut: Rambut kemaluan dan ketiak mulai tumbuh.
   - Menstruasi: Siklus menstruasi dimulai dengan adanya menstruasi atau haid.
   - Pertumbuhan tubuh: Pertumbuhan tinggi badan yang signifikan terjadi pada awal pubertas.
\n\n3.Perubahan Fisik pada Laki-laki:
   - Pertumbuhan testis: Testis mulai tumbuh dan berkembang.
   - Pertumbuhan rambut: Rambut kemaluan, wajah, dan ketiak mulai tumbuh.
   - Suara: Suara menjadi lebih dalam karena perubahan pada pita suara.
   - Pertumbuhan tubuh: Pertumbuhan tinggi badan yang signifikan terjadi pada awal pubertas.
\n\n4.Perubahan Hormonal: Pubertas ditandai oleh peningkatan produksi hormon seks, seperti estrogen pada perempuan dan testosteron pada laki-laki. Hormon-hormon ini memicu perubahan fisik dan perkembangan seksual.
\n\n5.Perubahan Emosional dan Psikologis: Selain perubahan fisik, remaja juga mengalami perubahan emosional dan psikologis selama pubertas. Ini termasuk fluktuasi mood, perubahan persepsi diri, eksplorasi identitas, dan perubahan hubungan sosial.
\n\n6.Perawatan Diri: Selama pubertas, penting bagi remaja untuk menjaga kebersihan diri yang baik, termasuk menjaga kebersihan tubuh, merawat kulit, menjaga kebersihan gigi, dan menggunakan produk perawatan diri yang sesuai.
\n\n7.Pendidikan Seksual: Pubertas juga merupakan waktu yang tepat untuk memperoleh pengetahuan yang tepat tentang seksualitas dan kesehatan reproduksi. Pendidikan seksual yang komprehensif penting untuk membantu remaja memahami perubahan tubuh mereka, mengatasi masalah dan kekhawatiran yang mungkin muncul, serta mempromosikan kesehatan reproduksi dan hubungan yang sehat.
\n\nSetiap individu mengalami pubertas dengan cara yang berbeda dan pada waktu yang berbeda pula. Jika Anda memiliki pertanyaan lebih lanjut tentang pubertas atau perubahan yang Anda alami, penting untuk berbicara dengan orang tua, dokter, atau profesional kesehatan lainnya yang dapat memberikan informasi dan dukungan yang tepat.</string>
    <string name="judul_gender">Identitas Gender</string>
    <string name="isi_gender">Identitas gender merujuk pada cara individu mengidentifikasi dan mengartikan diri mereka sendiri secara internal, terkait dengan kategori gender seperti pria, wanita, atau identitas gender non-binari. Identitas gender bukanlah hal yang sama dengan jenis kelamin biologis atau orientasi seksual. Berikut adalah beberapa informasi tentang identitas gender:
\n\n1.Jenis Kelamin Biologis: Jenis kelamin biologis merujuk pada karakteristik fisik dan fisiologis yang dikaitkan dengan laki-laki atau perempuan, seperti kromosom, alat kelamin, hormon, dan struktur tubuh lainnya.
\n\n2.Identitas Gender: Identitas gender adalah cara seseorang mengidentifikasi dan mengartikan dirinya sendiri secara dalam sebagai pria, wanita, atau identitas gender lainnya yang mungkin tidak sesuai dengan jenis kelamin biologisnya. Identitas gender seseorang mungkin sejalan dengan jenis kelamin biologisnya (cisgender) atau berbeda dengan jenis kelamin biologisnya (transgender).
\n\n3.Spektrum Gender: Identitas gender bukanlah hal yang terbatas pada dua kategori biner (pria dan wanita). Ada spektrum luas identitas gender yang mencakup variasi dan kompleksitas yang beragam, termasuk identitas non-binari, genderfluid, bigender, agender, dan lainnya. Identitas gender dapat beragam dan unik untuk setiap individu.
\n\n4.Peran Gender dan Ekspresi Gender: Peran gender merujuk pada harapan, norma, dan pola perilaku yang masyarakat terkaitkan dengan jenis kelamin tertentu. Ekspresi gender adalah cara individu menyampaikan identitas gender mereka melalui pakaian, gaya rambut, penampilan, bahasa tubuh, dan gaya hidup. Peran gender dan ekspresi gender dapat bervariasi secara budaya dan sosial.
\n\n5.Pengalaman Individu: Pengalaman identitas gender dapat sangat bervariasi untuk setiap individu. Beberapa orang mungkin merasa sejalan dengan identitas gender mereka sejak masa kecil, sementara yang lain mungkin menyadari atau menjelajahi identitas gender mereka di kemudian hari. Setiap perjalanan identitas gender unik, dan dukungan dan penghargaan terhadap perasaan dan pengalaman individu sangat penting.
\n\nPenting untuk diingat bahwa setiap individu memiliki hak untuk mengidentifikasi dan mengartikan identitas gender mereka sendiri. Menghormati dan mengakui identitas gender seseorang adalah langkah penting dalam menciptakan masyarakat yang inklusif dan menghargai keragaman gender.</string>
    <string name="judul_orientasi_sex">Orientasi Sex</string>
    <string name="isi_orientasi_sex">Orientasi seksual merujuk pada ketertarikan romantis, seksual, atau emosional seseorang terhadap orang lain.
\nOrientasi seksual biasanya dibagi menjadi beberapa kategori yang umum, termasuk heteroseksual, homoseksual, biseksual, dan aseksual.
\nBerikut adalah penjelasan singkat tentang masing-masing orientasi seksual:
\n\n1.Heteroseksual: Heteroseksual adalah ketika seseorang merasa tertarik secara romantis, seksual, atau emosional terhadap orang dengan jenis kelamin yang berbeda. Ini adalah orientasi seksual yang paling umum di banyak budaya di seluruh dunia.
\n\n2.Homoseksual: Homoseksualitas merujuk pada ketertarikan romantis, seksual, atau emosional seseorang terhadap orang dengan jenis kelamin yang sama. Seorang pria yang tertarik pada pria secara seksual disebut gay, sementara seorang wanita yang tertarik pada wanita disebut lesbian.
\n\n3.Biseksual: Biseksualitas adalah ketika seseorang merasa tertarik secara romantis, seksual, atau emosional terhadap orang dengan jenis kelamin yang berbeda maupun sama. Orang yang biseksual bisa merasa tertarik pada pria dan wanita.
\n\n4.Aseksual: Aseksualitas merujuk pada ketiadaan ketertarikan seksual atau kurangnya minat pada aktivitas seksual dengan orang lain. Meskipun seseorang aseksual tidak merasakan ketertarikan seksual, mereka masih bisa memiliki ikatan emosional atau romantis dengan orang lain.
\n\nSelain orientasi seksual di atas, terdapat juga beragam identitas dan pengalaman seksual lainnya, seperti panseksual (ketertarikan pada orang terlepas dari identitas atau ekspresi gender mereka), demiseksual (ketertarikan seksual hanya muncul setelah ada ikatan emosional yang kuat), dan lain sebagainya.
\n\nPenting untuk diingat bahwa orientasi seksual adalah bagian alami dari identitas seseorang, dan tidak ada yang salah atau buruk dengan memiliki orientasi seksual tertentu. Setiap individu berhak untuk mengidentifikasi dirinya sendiri dan hidup sesuai dengan orientasi seksual mereka tanpa diskriminasi atau pengekangan.</string>
    <string name="judul_pms">Pra-Menstruasi</string>
    <string name="isi_pms">Pramenstruasi, yang juga dikenal sebagai sindrom pramenstruasi atau PMS (Pre-Menstrual Syndrome), merujuk pada kumpulan gejala fisik, emosional, dan perilaku yang terjadi pada beberapa wanita dalam beberapa hari atau minggu menjelang menstruasi mereka.
\nBerikut adalah beberapa informasi mengenai pramenstruasi:
\n\n1.Gejala: Gejala pramenstruasi dapat bervariasi dari wanita ke wanita, dan juga dapat berbeda pada setiap siklus menstruasi. Gejala umum meliputi perubahan suasana hati seperti mudah marah, mudah tersinggung, atau perasaan sedih; perubahan emosional seperti kecemasan atau depresi; kelelahan; perubahan nafsu makan; kembung; sakit payudara; sakit kepala; nyeri perut bagian bawah; dan retensi cairan.
\n\n2.Penyebab: Penyebab pasti pramenstruasi belum sepenuhnya dipahami, tetapi diduga terkait dengan perubahan hormon dalam siklus menstruasi. Fluktuasi hormon, terutama estrogen dan progesteron, dapat memengaruhi kimia otak dan neurotransmiter, yang dapat berdampak pada suasana hati, emosi, dan kesejahteraan fisik.
\n\n3.Durasi dan Timing: Gejala pramenstruasi biasanya muncul beberapa hari hingga dua minggu sebelum menstruasi dan biasanya menghilang setelah menstruasi dimulai. Namun, intensitas dan durasi gejala dapat bervariasi. Beberapa wanita mungkin hanya mengalami gejala ringan, sementara yang lain dapat mengalami gejala yang lebih parah yang mempengaruhi kualitas hidup sehari-hari.
\n\n4.Pengelolaan: Ada beberapa cara yang dapat membantu mengelola gejala pramenstruasi. Ini termasuk menjaga gaya hidup sehat dengan pola makan seimbang, olahraga teratur, tidur yang cukup, mengelola stres, dan menghindari konsumsi alkohol dan kafein berlebih. Jika gejala pramenstruasi mengganggu kehidupan sehari-hari, dokter dapat merekomendasikan penggunaan obat-obatan, seperti analgesik untuk mengurangi nyeri atau kontrasepsi hormonal untuk mengatur siklus dan mengurangi gejala pramenstruasi.
\n\nPramenstruasi adalah kondisi umum yang dialami oleh banyak wanita. Jika Anda mengalami gejala pramenstruasi yang parah atau mengganggu, disarankan untuk berkonsultasi dengan profesional medis untuk mendapatkan penilaian dan saran yang lebih spesifik.</string>
    <string name="judul_kehamilan">Kehamilan</string>
    <string name="about_app"><![CDATA[Wulan, Taufiq dan Yenna\nQuesex Project ©2023]]></string>
    <string name="logout">Keluar</string>
</resources>